--- a/src/modules/static/style.css
+++ b/src/modules/static/style.css
@@ -83,13 +83,6 @@ img {
 
 }
 
-.results {
-
-    padding-left: 60px;
-    width: 3800px;
-
-}
-
 .button {
     border: none;
     color: white;
@@ -117,4 +110,10 @@ img {
 .button1:hover {
     background-color: rgb(63, 155, 112);
     color: white;
+}
+
+.cutom-card {
+    padding-right: 5px;
+    width: 300px; /* Set the width as per your requirement */
+    height: 400px; /* Set the height as per your requirement */
 }
