--- a/src/modules/static/style.css
+++ b/src/modules/static/style.css
@@ -117,3 +117,32 @@ img {
     width: 300px; /* Set the width as per your requirement */
     height: 400px; /* Set the height as per your requirement */
 }
+
+.title {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;  
+    overflow: hidden;
+}
+
+/* .card-image-specs{
+    width: 270px;
+    height: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+} */
+
+.image-container {
+    width: 100%;
+    height: 100%;
+}
+
+.two-line-text{
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2; /* Limit to two lines */
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: normal;
+}
