--- a/src/modules/static/style.css
+++ b/src/modules/static/style.css
@@ -113,16 +113,17 @@ img {
 }
 
 .cutom-card {
-    padding-right: 5px;
-    width: 300px; /* Set the width as per your requirement */
-    height: 400px; /* Set the height as per your requirement */
+    padding-right: 0.15625em; /* Adjust the padding as needed */
+    width: 18.75%; /* Adjust the width as needed */
+    height: 20%; /* Adjust the height as needed */
 }
 
 .title {
     display: -webkit-box;
     -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;  
+    -webkit-box-orient: vertical;
     overflow: hidden;
+    font-size: 1.3125em; /* Adjust the font size as needed */
 }
 
 /* .card-image-specs{
@@ -145,4 +146,24 @@ img {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: normal;
+    font-size: 1.3125em;
 }
+
+.card-header img {
+    height: 2.625em;
+    width: auto;
+    padding-top: 0;
+}
+
+/*.card-body {
+    width: 75%; 
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+} */
+
+/* .card-text {
+    font-size: 1.3125em; 
+    text-align: center;
+} */ 
