--- a/src/modules/static/style.css
+++ b/src/modules/static/style.css
@@ -1,4 +1,3 @@
-
 .space{
     line-height: 2rem;
 }
@@ -10,7 +9,7 @@ h1{
 {
     text-align: center;
     height: 80px;
-    background: -webkit-linear-gradient(left, #0072ff, #8811c5);
+    background: -webkit-linear-gradient(left, #80ff00, #11c541);
     color: #fff;
     font-weight: bold;
     line-height: 80px;
@@ -34,8 +33,9 @@ h1{
     padding: 1%;
     width: 20%;
     cursor: pointer;
-    background: #0062cc;
+    background: green;
     color: #fff;
+    text-align: center;
 }    
 #header {
     font-family: Trebuchet MS, sa ns-serif;
