--- a/Slash_Android/app/src/main/res/values/colors.xml
+++ b/Slash_Android/app/src/main/res/values/colors.xml
@@ -7,5 +7,5 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="bottom_bar_background">#405EA8</color>
+    <color name="bottom_bar_background">#0071CE</color>
 </resources>
