--- a/src/modules/static/style.css
+++ b/src/modules/static/style.css
@@ -1,3 +1,34 @@
+.sign-in-heading{
+    margin-top: 5px;
+    text-align: center;
+    align-items: center;
+    color: black;
+    padding-bottom: 50px;
+}
+
+.sign-in-card{
+    width: 30%;
+    background-color: #b6dcb7; 
+    margin: 0;
+}
+
+.si-card-body .card-footer{
+    /* background-color: #93dd95;
+    display: flex;
+    justify-content: center;
+    margin: 0% */
+    padding: 20px;
+}
+
+.btn-block {
+    display: block;
+    width: 100%;
+}
+
+.label {
+    margin: 0;
+}
+
 .space{
     line-height: 2rem;
 }
@@ -5,21 +36,24 @@ h1{
     padding-top: 10%;
     text-align: center;
 }
-.note
+/* .note
 {
     text-align: center;
+    align-items: center;
+    width: 25%;
     height: 80px;
     background: -webkit-linear-gradient(left, #80ff00, #11c541);
     color: #fff;
     font-weight: bold;
     line-height: 80px;
-}
-.form-content
+} */
+
+/* .form-content
 {
     padding: 5%;
     border: 1px solid #ced4da;
     margin-bottom: 2%;
-}
+} */
 .form-control{
     border-radius:1.5rem;
 }
